manifests/kong/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
  namespace: kong
spec:
  type: ClusterIP
  selector:
    app: kong
  ports:
    - name: proxy
      port: 80
      targetPort: 8000
    - name: proxy-ssl
      port: 443
      targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: kong-admin
  namespace: kong
spec:
  type: ClusterIP
  selector:
    app: kong
  ports:
    - name: admin
      port: 8001
      targetPort: 8001
    - name: admin-ssl
      port: 8444
      targetPort: 8444
